# Deferred-Rendering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Examples/: CMakeLists.txt
Examples/DeferredRendering/: CMakeLists.txt
Examples/DeferredRendering/src/: main.cpp
Examples/Triangle/: CMakeLists.txt
Examples/Triangle/src/: main.cpp
Renderer/: CMakeLists.txt
Renderer/src/: main.cpp
Renderer/src/Core/: Core.h  Log.h
Renderer/src/Objects/: Framebuffer.cpp  Framebuffer.h  GPUObject.h  Renderbuffer.cpp  Renderbuffer.h  Shader.cpp  Shader.h  ShaderFactory.cpp  ShaderFactory.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp
runtime/: imgui.ini
runtime/shader/: composite.frag  composite.vert  gbuffer.frag  gbuffer.vert
